--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
 <header class="header center">
-    <section class="header__navigation center">
+    <img class="header-image" src="./img/Symbol.png" alt="symbol">
+    <section class="header__navigation">
         <article class="navigation-contacts">
             <div class="navigation-contacts-logo">
                 <a href="#" class="logo">
@@ -50,8 +51,95 @@
             </ul>
         </article>
     </section>
-
+    <section class="header__hero">
+        <h2 class="header__hero-title">you legal solutions provider</h2>
+        <a href="#offer" class="header__hero-arrow"><i></i></a>
+        <article class="header__hero-offer" id="offer">
+            <ul class="offer-items">
+                <li class="offer-item">Consistent</li>
+                <li class="offer-item">Customer oriented</li>
+                <li class="offer-item">Innovative</li>
+                <li class="offer-item">Business oriented</li>
+            </ul>
+            <span class="offer-line"></span>
+            <div class="offer-desc">
+                <h2 class="offer-desc-title">We turn the idea of legal services</h2>
+                <p class="offer-desc-text">Consolidating many years of experience and practice, the company's
+                    lawyers accompany complex projects and achieve a number of important decisions for the industry.
+                    Many of them form the practice of applying the law of the sea in Ukraine.</p>
+            </div>
+        </article>
+    </section>
+    <section class="header__cards">
+        <a href="" class="header__cards-link link-arrow">Services <i class="arrow right"></i></a>
+        <h2 class="header__cards-title gradient-title">What can we do better than others?</h2>
+        <article class="header__cards-items">
+            <div class="cards-item">
+                <a href="#" class="cards-item-img"><img src="./img/Icon-bag.png" alt="bag"></a>
+                <a href="" class="cards-item-subtitle">
+                    <h3>IT and e-commerce</h3>
+                </a>
+                <p class="cards-item-desc">An endless stream of contracts, tax issues, labor relations, corporate
+                    papers - legal work distracts you from doing business. But there is not much work to do to hire an
+                    in-house lawyer.</p>
+            </div>
+            <div class="cards-item">
+                <a href="#" class="cards-item-img"><img src="./img/Icon-case.png" alt="bag"></a>
+                <a href="" class="cards-item-subtitle">
+                    <h3>Comprehensive daily legal support</h3>
+                </a>
+                <p class="cards-item-desc">In addition, over time, the work will become the same type and uninteresting
+                    for a full-time lawyer. And we know very well how difficult it is to find a good candidate with
+                    experience in the field of information technology in Ukraine.</p>
+            </div>
+            <div class="cards-item">
+                <a href="#" class="cards-item-img"><img src="./img/Icon-circle.png" alt="bag"></a>
+                <a href="" class="cards-item-subtitle">
+                    <h3>Structuring corporate relationships</h3>
+                </a>
+                <p class="cards-item-desc">Instead of just providing legal services, we will hire a lawyer or a whole
+                    team that will fit into the daily life of your company.</p>
+            </div>
+            <div class="cards-item">
+                <a href="#" class="cards-item-img"><img src="./img/Icon-hands.png" alt="bag"></a>
+                <a href="" class="cards-item-subtitle">
+                    <h3>Building contractual relations</h3>
+                </a>
+                <p class="cards-items-desc">Once a week, or week after month, you have your own lawyer by your side.
+                    Anyone in the company can catch it at the coffee maker and just talk about current affairs instead
+                    of waiting for update status.</p>
+            </div>
+            <div class="cards-item">
+                <a href="#" class="cards-item-img"><img src="./img/Icon-shield.png" alt="bag"></a>
+                <a href="" class="cards-item-subtitle">
+                    <h3>Protection of business, intellectual property</h3>
+                </a>
+                <p class="cards-items-desc">And all the other time he will work on new diverse projects, so he will
+                    definitely not stop in professional development. One way or another, all Axon Partners will work for
+                    you instead of a corporate lawyer.</p>
+            </div>
+            <div class="cards-item">
+                <a href="#" class="cards-item-img"><img src="./img/Icon-hummer.png" alt="bag"></a>
+                <a href="" class="cards-item-subtitle">
+                    <h3>Judicial representation</h3>
+                </a>
+                <p class="cards-item-desc">Is it a small, medium-sized company or a market leader? Local business or
+                    multinational company? Do you have your own legal department or not?</p>
+            </div>
+        </article>
+    </section>
 </header>
+<main class="main center">
+    <section class="main__team">
+        <img src="/img/team.png" alt="tem" class="main__team-image">
+        <article class="main__team-about">
+            <a href="" class="team-about-link link-arrow">команда <i class="arrow right"></i></a>
+            <h2 class="team-about-title gradient-title">What can we do better than others?</h2>
+            <h3 class="team-about-position">Олександр Олександровський</h3>
+            <p class="team-about-name">Керуючий партнер</p>
+        </article>
+    </section>
+</main>
 
 </body>
 </html>
