--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                 <a href="#" class="language">eng</a>
                 <span class="info-address">Kyiv, Mechnikova str, 14/1</span>
                 <span class="info-tel">0800 211 927</span>
-                <a href="#" class="facebook"><img src="./img/Facebook.svg" alt="facebook"></a>
+                <a href="#" class="facebook"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M24 12.0733C24 5.40541 18.6274 0 12 0C5.37258 0 0 5.40541 0 12.0733C0 18.0995 4.38823 23.0943 10.125 24V15.5633H7.07813V12.0733H10.125V9.41343C10.125 6.38755 11.9165 4.71615 14.6576 4.71615C15.9705 4.71615 17.3438 4.95195 17.3438 4.95195V7.92313H15.8306C14.3399 7.92313 13.875 8.85379 13.875 9.80857V12.0733H17.2031L16.6711 15.5633H13.875V24C19.6118 23.0943 24 18.0995 24 12.0733Z" fill="#ffff"/>
+                </svg></a>
             </div>
         </article>
         <article class="navigation-list">
@@ -129,17 +131,110 @@
         </article>
     </section>
 </header>
-<main class="main center">
-    <section class="main__team">
-        <img src="/img/team.png" alt="tem" class="main__team-image">
-        <article class="main__team-about">
-            <a href="" class="team-about-link link-arrow">команда <i class="arrow right"></i></a>
-            <h2 class="team-about-title gradient-title">What can we do better than others?</h2>
-            <h3 class="team-about-position">Олександр Олександровський</h3>
-            <p class="team-about-name">Керуючий партнер</p>
+<main class="main">
+    <section class="main__slider center">
+        <div class="slide" id="slide">
+                <img src="/img/team.png" alt="tem" class="slide-image">
+            <div class="slide-desk">
+                <a href="" class="slide-desk-link link-arrow">команда <i class="arrow right"></i></a>
+                <h2 class="slide-desk-title gradient-title">Ми звикли брати на себе відповідальність та завжди
+                    гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.</h2>
+                <h3 class="slide-desk-position">Олександр Олександровський</h3>
+                <p class="slide-desk-name">Керуючий партнер</p>
+            </div>
+        </div>
+        <div class="slider-nav">
+            <a href="#slide"></a>
+            <a href="#!"></a>
+            <a href="#!"></a>
+        </div>
+    </section>
+    <section class="main__partners">
+        <p class="main_partners-title">They already trust us</p>
+        <article class="main_partners-grid">
+            <a href="#" class="grid-logo"><img src="img/logoPartner1.png" alt="logo1"></a>
+            <a href="#" class="grid-logo"><img src="img/logoPartner2.png" alt="logo2"></a>
+            <a href="#" class="grid-logo"><img src="img/logoPartner3.png" alt="logo3"></a>
+            <a href="#" class="grid-logo"><img src="img/logoPartner4.png" alt="logo4"></a>
+            <a href="#" class="grid-logo"><img src="img/logoPartner5.png" alt="logo5"></a>
+            <a href="#" class="grid-logo"><img src="img/logoPartner6.png" alt="logo6"></a>
+            <a href="#" class="grid-logo"><img src="img/logoPartner7.png" alt="logo7"></a>
+            <a href="#" class="grid-logo"><img src="img/logoPartner8.png" alt="logo8"></a>
+            <a href="#" class="grid-logo"><img src="img/logoPartner9.png" alt="logo9"></a>
+            <a href="#" class="grid-logo"><img src="img/logoPartner10.png" alt="logo10"></a>
+            <a href="#" class="grid-logo"><img src="img/logoPartner11.png" alt="logo11"></a>
+            <a href="#" class="grid-logo"><img src="img/logoPartner12.png" alt="logo12"></a>
+        </article>
+    </section>
+    <section class="main__publications center">
+        <a href="" class="main__publications-link link-arrow">Publications <i class="arrow right"></i></a>
+        <h2 class="main__publications-title gradient-title">We have something to tell</h2>
+        <article class="main__publications-cards">
+            <div class="publications-card">
+                <div class="card-image">
+                    <img src="img/public-card1.png" alt="card1">
+                </div>
+                <a href=""><h3 class="card-subtitle">Equity associate</h3></a>
+                <p class="card-date">April 22</p>
+                <div class="card-line">
+                    <span></span>
+                </div>
+                <p class="card-desc">I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before
+                    entering my parents told me that if I…</p>
+            </div>
+            <div class="publications-card">
+                <div class="card-image">
+                    <img src="img/public-card2.png" alt="card2">
+                </div>
+                <a href=""><h3 class="card-subtitle">Penalty for the Good Corporation: what will happen to Google and others for
+                    violating the GDPR</h3></a>
+                <p class="card-date">September 29</p>
+                <div class="card-line">
+                    <span></span>
+                </div>
+                <p class="card-desc">And why the recovery of 50 million euros could be a fateful precedent According to
+                    Mind.ua January 21 National Commission for Data Protection.</p>
+            </div>
+            <div class="publications-card">
+                <div class="card-image">
+                    <img src="img/public-card3.png" alt="card3">
+                </div>
+                <a href="#"><h3 class="card-subtitle">Millennial Testament</h3></a>
+                <p class="card-date">August 19</p>
+                <div class="card-line">
+                    <span></span>
+                </div>
+                <p class="card-desc">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit
+                    A typical legacy of the Ukrainian generation X looks like this: an apartment in…</p>
+            </div>
         </article>
     </section>
 </main>
+<footer class="footer center">
+    <div class="footer__line">
+        <span></span>
+    </div>
+    <section class="footer__contacts">
+        <article class="footer__contacts-desc">
+            <div class="contacts-address">
+                <span class="info-address">Kyiv, Mechnikova str, 14/1</span>
+                <a href="#" class="on-map">on map</a>
+            </div>
+            <div class="contacts-tel">
+                <a href="#" class="facebook">
+                    <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M38 19.1161C38 8.55857 29.4934 0 19 0C8.50658 0 0 8.55857 0 19.1161C0 28.6575 6.94803 36.5659 16.0312 38V24.6419H11.207V19.1161H16.0312V14.9046C16.0312 10.1136 18.8678 7.46723 23.2078 7.46723C25.2866 7.46723 27.4609 7.84059 27.4609 7.84059V12.545H25.0651C22.7048 12.545 21.9688 14.0185 21.9688 15.5302V19.1161H27.2383L26.3959 24.6419H21.9688V38C31.052 36.5659 38 28.6575 38 19.1161Z" fill="#24A3FF"/>
+                    </svg>
+                </a>
+                <span class="contact-tel">0800 211 927</span>
+                <a href="#" class="e-mail">contact@forstudy.space</a>
+            </div>
+        </article>
+        <article class="footer__contacts-copyrights">
+            <span>© 2021 HLEGAL Law company, LLC</span>
+        </article>
+    </section>
+</footer>
 
 </body>
 </html>
