Add styles for desktop and tablet versions

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         <article class="header__hero-offer" id="offer">
             <ul class="offer-items">
                 <li class="offer-item">Consistent</li>
-                <li class="offer-item">Customer oriented</li>
-                <li class="offer-item">Innovative</li>
-                <li class="offer-item">Business oriented</li>
+                <li class="offer-item"><a href="#">Customer oriented</a></li>
+                <li class="offer-item"><a href="#">Innovative</a></li>
+                <li class="offer-item"><a href="#">Business oriented</a></li>
             </ul>
             <span class="offer-line"></span>
             <div class="offer-desc">
@@ -324,7 +324,7 @@
 <main class="main">
     <section class="main__slider center">
         <div class="slide" id="slide">
-            <img src="/img/team.png" alt="tem" class="slide-image">
+            <div class="slide-img"></div>
             <div class="slide-desk">
                 <a href="" class="slide-desk-link link-arrow">команда <i class="arrow right"></i></a>
                 <h2 class="slide-desk-title gradient-title">Ми звикли брати на себе відповідальність та завжди
@@ -411,6 +411,11 @@
                 <span class="info-address">Kyiv, Mechnikova str, 14/1</span>
                 <a href="#" class="on-map">on map</a>
             </div>
+        </article>
+        <article class="footer__contacts-copyrights">
+            <span>© 2021 HLEGAL Law company, LLC</span>
+        </article>
+        <article class="footer__contacts-tel">
             <div class="contacts-tel">
                 <a href="#" class="facebook">
                     <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -421,9 +426,6 @@
                 <span class="contact-tel">0800 211 927</span>
                 <a href="#" class="e-mail">contact@forstudy.space</a>
             </div>
-        </article>
-        <article class="footer__contacts-copyrights">
-            <span>© 2021 HLEGAL Law company, LLC</span>
         </article>
     </section>
 </footer>
