Add page AboutUs and stiles

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="navigation-list-items">
                 <ul class="navigation-items">
                     <li class="navigation-item">
-                        <a href="" class="selected">about us</a>
+                        <a href="">about us</a>
                     </li>
                     <li class="navigation-item">
                         <a href="">services</a>
