Add page AboutUs, stiles and mobile version

--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<header class="header">
-    <section class="header__navigation">
+<header class="header header__about">
+    <section class="header__navigation navigation-about">
         <article class="navigation-contacts">
             <div class="navigation-contacts-logo">
                 <a href="#" class="logo">
@@ -35,11 +35,12 @@
                 </a>
             </div>
         </article>
-        <article class="navigation-list">
+        <article class="navigation-list navigation-list-about">
             <input type="checkbox" class="visually-hidden" id="nav-toggler">
-            <label for="nav-toggler" class="header__toggler">
+            <label for="nav-toggler" class="header__toggler header__toggler-about">
                 <span></span><span></span><span></span>
             </label>
+            <div class="curtain"></div>
             <div class="navigation-list-items">
                 <ul class="navigation-items">
                     <li class="navigation-item">
@@ -61,7 +62,7 @@
             </div>
         </article>
     </section>
-    <section class="header__hero center">
+    <section class="header__hero hero-about center-about">
         <article class="header__hero-desc">
             <h2 class="header__hero-title gradient-title">We turn over the idea of legal services</h2>
             <p class="header__hero-text">Consolidating many years of experience and practice, the company's lawyers
@@ -126,7 +127,7 @@
             <img src="/img/aboutUs/Team.jpg" alt="team" class="team-poster-img">
             <h1 class="team-poster-title">team</h1>
         </article>
-        <article class="main__team-desc center">
+        <article class="main__team-desc center-about">
             <p class="team-desc-text">The historically unchanged legal profession has begun to reformat in recent years.
                 Clients are feeling this, but law firms are still resisting evolution. Clients need convenience,
                 simplicity, transparent payment. Google, IBM WatsOn, Symantec Clearwell prove that the technological
