--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <label for="nav-toggler" class="header__toggler">
                <span></span><span></span><span></span>
             </label>
+            <div class="curtain"></div>
             <div class="navigation-list-items">
                 <ul class="navigation-items">
                     <li class="navigation-item">
