Add styles for 414px screen

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                 <a href="#" class="language">ук</a>
                 <a href="#" class="language">ру</a>
                 <a href="#" class="language">eng</a>
-                <span class="info-address">Kyiv, Mechnikova str, 14/1</span>
+                <span class="info-address info-address-about">Kyiv, Mechnikova str, 14/1</span>
                 <span class="info-tel">0800 211 927</span>
                 <a href="#" class="facebook">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -139,7 +139,7 @@
             <h2 class="team-desc-subtitle gradient-title">Quality is what we care about the most.</h2>
         </article>
     </section>
-    <section class="main__slider">
+    <section class="main__slider slider-about">
         <p class="main__slider-title">achievements</p>
         <div class="slide-items" id="slide">
             <div class="slide-item">
