--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <header class="header center">
-    <img class="header-image" src="./img/Symbol.png" alt="symbol">
+    <div class="header-image"><img src="./img/Symbol.png" alt="symbol"></div>
     <section class="header__navigation">
         <article class="navigation-contacts">
             <div class="navigation-contacts-logo">
