Add styles for 414px screen

--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
             <div class="navigation-list-items">
                 <ul class="navigation-items">
                     <li class="navigation-item">
-                        <a href="">about us</a>
+                        <a href="about.html" target="_blank">about us</a>
                     </li>
                     <li class="navigation-item">
-                        <a href="">services</a>
+                        <a href=""№>services</a>
                     </li>
                     <li class="navigation-item">
-                        <a href="">team</a>
+                        <a href="№">team</a>
                     </li>
                     <li class="navigation-item">
-                        <a href="">publications</a>
+                        <a href="№">publications</a>
                     </li>
                     <li class="navigation-item">
-                        <a href="">contact</a>
+                        <a href="№">contact</a>
                     </li>
                 </ul>
             </div>
